syntax = "proto3";
package bff;

import "bff/bcommon.proto";

option go_package = "bff/;bffpb";

//玩家基本信息
message PlayerInfo {
  PlayerSimpleInfo simple_info = 1; //基本信息
  int32 new_step = 2; //新手引导步骤 0新号
}

//请求玩家基本信息（包括位置信息）
message C2SSimpleInfo {
  int64 uid = 1;
}

//simpleInfo
message S2CSimpleInfo {
  PlayerInfo info = 1;
}

//记录新手引导步骤
message C2SNewPlayerGuide {
  int32 step = 1; //步骤
  int32 step_pet = 2; //宠物引导完成步骤
  int32 step_boss = 3; //boss战引导完成步骤
  int32 step_play = 4; //玩法引导完成步骤
}

//记录新手引导步骤返回
message S2CNewPlayerGuide {}

// 随机角色名
message C2SRandomPlayerName {}

// 随机角色名返回
message S2CRandomPlayerName {
  string name = 1;
}

//玩家创建角色
message C2SNewPlayer {
  string name = 1; //名字
  int32 hero_id = 2; // 英雄id
}

//玩家创建角色设置返回
message S2CNewPlayer {
  PlayerSimpleInfo simple_info = 2; // 角色概要信息
}

message C2SGetRoomInfo {}
message S2CGetRoomInfo {
  string room_host = 1; // 房间地址
  string room_id = 2; // 房间id
  int32 room_type = 3; //房间类型 0:世界 1:战斗 3:
  string room_token = 4; //战斗房间token
  int32 play_id = 5; //玩法ID
  int32 map_id = 6; //地图ID
}

/*******************************************************玩家详情信息***********************************************************************/

message C2SPlayerRename {
  string name = 1; //新昵称
}

message S2CPlayerRename {
  string name = 1; //修改后的昵称
}

message C2SGetPlayerRoomInfo {
  int64 uid = 1; //玩家ID
}

message S2CGetPlayerRoomInfo {
  string room_id = 1; //房间ID
  string room_host = 2; //房间地址
}

message C2SGetPlayerDetailInfo {
  int64 uid = 1; //玩家ID
}

message S2CGetPlayerDetailInfo {
  int64 uid = 1; //玩家ID
  string name = 2; //玩家昵称
  string head_id = 3; //头像id
  int32 cup_amount = 4; //奖杯总数
  repeated BattleLevelInfo battle_level = 5; //段位信息 index_0:当前赛季 index_1:历史最高段位
  repeated BattleInfo battle_info = 6; //常玩游戏前三 按序排列
}

message BattleLevelInfo {
  int32 big_level = 1; //大段位
  int32 small_level = 2; //小段位
}

message BattleInfo {
  int32 play_id = 1; //玩法ID
  int32 amount = 2; //游玩次数
  int32 win_amount = 3; //获胜次数
}
